independent-publisher-2/style.css
/* ... */
.page-links span {
	display: inline-block;
}

.page-links a {
	display: inline-block;
	min-width: 1em;
	margin: 0 -2px;
	padding: .21875em .21875em .109375em;
	text-align: center;
	text-decoration: none;
	border-bottom: solid 3px transparent;
}

.page-links a:hover {
	color: #2d5a36;
	border-bottom-color: #e0e0e0;
}

.single .post-edit-link {
	display: block;
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen-Sans", "Ubuntu", "Cantarell", "Helvetica Neue", sans-serif;
	font-size: 15px;
}

.single .entry-header + .post-edit-link {
	margin-top: 1.75em;
}

.single .post-edit-link a {
	display: inline-block;
	padding: .4375em .875em;
	-webkit-transition: color 140ms ease-in-out;
		transition: color 140ms ease-in-out;
	line-height: 1;
	text-decoration: none;
	color: #92928f;
	border-radius: 3px;
	background: #f5f5f5;
}

.single .post-edit-link a:before {
	display: inline-block;
	margin: -.109375em .21875em 0 -.21875em;
	content: "\f411";
	font-family: "Genericons";
	vertical-align: middle;

	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

.single .post-edit-link a:hover,
.single .post-edit-link a:focus,
.single .post-edit-link a:active {
	color: #0087be;
}

/*--------------------------------------------------------------
13.2 - Hero Header
--------------------------------------------------------------*/

.has-header-image #hero-header {
	position: relative;
	padding: 5vh 1.75em;
}

.has-header-image #hero-header:before {
	position: absolute;
	z-index: 1;
	top: 0;
	left: 0;
	display: block;
	width: 100%;
	height: 100%;
	content: "\020";
	background: -webkit-linear-gradient(rgba(0, 0, 0, .15) 50%, rgba(0, 0, 0, .45));
	background:				 linear-gradient(rgba(0, 0, 0, .15) 50%, rgba(0, 0, 0, .45));
	box-shadow: 0 -1px 8px rgba(0, 0, 0, .2) inset;
}

.has-header-image #hero-header .inner {
	position: relative;
	z-index: 2;
	max-width: 740px;
	margin: 0 auto;
	padding-top: .875em;
	text-align: center;
	word-wrap: break-word;
	color: white;
}

.has-header-image #hero-header .site-title {
	color: white;
}

.has-header-image #hero-header .site-description {
	color: rgba(255, 255, 255, .84);
}

.has-header-image #hero-header .site-logo-link img {
	-webkit-transition: box-shadow 200ms ease;
		transition: box-shadow 200ms ease;
	outline: 0;
}

.has-header-image #hero-header .site-logo-link:focus img,
.has-header-image #hero-header .site-logo-link:active img {
	box-shadow: 0 0 0 7px rgba(255, 255, 255, .22);
}

.has-header-image #hero-header .jetpack-social-navigation ul.menu li a {
	padding: 0 0;
	color: rgba(255, 255, 255, .85);
}

.has-header-image #hero-header .jetpack-social-navigation ul.menu li a:hover {
	color: white;
}

/*--------------------------------------------------------------
13.3 - Post Author Card
--------------------------------------------------------------*/

.entry-author-wrapper {
	position: relative;
	margin: 1.75em 0 0;
	padding: 1.75em 0 0;
}

.entry-author .author-avatar {
	position: relative;
	z-index: 2;
	display: block;
	float: right;
	margin-left: .875em;
	width: 80px;
}

.entry-author .author-avatar img {
	position: relative;
	display: block;
	float: right;
	width: 80px;
	height: auto;
	border-radius: 80px;
}
.entry-author .author-title {
	clear: none;
	margin: 0;
	font-size: 19px;
	font-weight: 700;
	line-height: 1.4;
	color: #333332;
}

.entry-author .author-bio,
.entry-author .author-heading {
	position: relative;
	z-index: 1;
	display: block;
	clear: none;
	box-sizing: border-box;
}

.entry-author .author-bio {
	margin-top: 0;
	font-size: 15px;
	font-style: italic;
	color: #929292;
}

.site-posted-on {
	position: relative;
	display: none;
	margin-left: 100px;
}

.site-posted-on strong {
	display: block;
	clear: right;
	margin: 1.75em 0 0;
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen-Sans", "Ubuntu", "Cantarell", "Helvetica Neue", sans-serif;
	font-size: 15px;
	font-weight: 700;
	font-style: normal;
	line-height: 1.4;
	color: #333332;
}

.site-posted-on time {
	display: block;
	margin: 0;
	font-family: Georgia, "Times New Roman", serif;
	font-size: 15px;
	font-weight: inherit;
	font-style: normal;
	line-height: 2;
	color: #929292;
}

.site-posted-on time.updated:not(.published) {
	display: none;
}

.site-posted-on strong {
	margin-top: 0;
}

.site-posted-on:before {
	display: none;
}

/*--------------------------------------------------------------
14.0 - Infinite scroll
--------------------------------------------------------------*/

/* Globally hidden elements when Infinite Scroll is supported and in use. */
.infinite-scroll .posts-navigation,
.infinite-scroll.neverending .site-footer {
	/* Theme Footer (when set to scrolling) */
	display: none;
}

/* When Infinite Scroll has reached its end we need to re-display elements that were hidden (via .neverending) before. */
.infinity-end.neverending .site-footer {
	display: block;
}

.infinite-loader {
	margin-top: 2.05em;
}

#content #infinite-handle {
	margin-top: 1.75em;
}

#content #infinite-handle span {
	padding: 0;
	background: none;
}

#content #infinite-handle span button {
	line-height: 1;
	outline: 0;
}

#infinite-footer .container {
	padding: 0;
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen-Sans", "Ubuntu", "Cantarell", "Helvetica Neue", sans-serif;
	font-size: 12px;
	color: #a5a5a5;
	border: 0;
}
#infinite-footer .blog-info a,
#infinite-footer .blog-credits,
#infinite-footer .blog-credits a {
	font-size: 12px;
	color: #a5a5a5;
}
#infinite-footer .blog-info a:hover,
#infinite-footer .blog-credits a:hover {
	text-decoration: none;
}

/*--------------------------------------------------------------
# Jetpack Contact Forms
--------------------------------------------------------------*/

.site-content .contact-form input[type="radio"],
.site-content .contact-form input[type="checkbox"] {
  margin-bottom: 6px;
  margin-right: .3em;
  vertical-align: middle;
}
/* ... */

